[tool.poetry]
name = "probabilistic-data-structures-tdc-demo"
version = "0.1.0"
description = ""
authors = ["Janael Pinheiro <ajanaelpinheiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mmh3 = "^4.1.0"
numpy = "^1.26.4"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
